# chicago_project_zero_fatalities_parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  release-plz.toml
.github/workflows/: general.yml  release-plz.yml  release.yml
src/: json_parser.rs  main.rs
tests/: cli.rs
