[package]
name = "chicago_project_zero_fatalities_parser"
version = "0.1.4"
edition = "2024"
authors = ["Diego Enriquez-Serrano <diego@diegoenriquezserrano.dev>"]
license = "GPL-3.0-or-later"
description = "A parser for json data found at 'Vision Zero Chicago Traffic Fatalities | Chicago Data Portal' into GeoJson without unecessary properties."
readme = "README.md"
homepage = "https://www.diegoenriquezserrano.dev/vision-zero-chicago-map"
repository = "https://github.com/diegoEnriquezSerrano/chicago_project_zero_fatalities_parser"
keywords = ["cli", "parser", "geojson", "json"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
geojson = "0.24.2"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
